tests/cheri-ci/expected/0084-KO1.error.c.expected
cheri-ci/0084-KO1.error.c:1:19: error: unexpected token '}'
int glob_a1[2] = {}; // this seems to be forbidden by the STD syntax
                  ^ 
